# git-lantern

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Makefile  README.md  install  pyproject.toml
.githooks/: pre-commit
.github/workflows/: auto-tag-release.yml  auto-tag.yml  ci.yml  deb-build.yml  deb.yml  homebrew-package.yml  homebrew.yml  man.yml  ppa-deb.yml  ppa.yml  python.yml  release-build.yml  release.yml  rpm-build.yml  rpm.yml
completions/: lantern.bash
docs/: commands.md  use-cases.md
man/: lantern.1
packaging/: README.md  packaging.env
packaging/deb/: README.md
packaging/homebrew/: README.md
packaging/ppa/: README.md
packaging/rpm/: README.md
scripts/: build.sh  bump_version.sh  generate_man.sh  install.sh  install_git_hooks.sh  lint.sh  local_ci.sh  packaging_init.sh  python_helpers.sh  release.sh  test.sh  todo_to_issues.py  update_submodules.sh
src/lantern/: cli.py  config.py  forge.py  forge_client.py  git.py  github.py  pr_sweep.py  table.py  todo_issues.py
tests/: test_cli_default_tui.py  test_cli_todo_command.py  test_flat_parser.py  test_fleet_apply_helpers.py  test_fleet_branch_actions.py  test_fleet_latest_branch.py  test_fleet_overview_dirty.py  test_fleet_pr51_regressions.py  test_fleet_selection_and_bulk.py  test_forge_tui_feedback.py  test_git_status.py  test_legacy_snapshot_reuse.py  test_org_support.py  test_pr_sweep.py  test_status_latest_info.py  test_todo_to_issues.py  test_version_metadata.py
