[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "git-lantern"
dynamic = ["version"]
description = "Local and GitHub repository visibility and status toolkit."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "git-lantern contributors" }
]
dependencies = ["argcomplete>=3.0.0"]

[project.scripts]
lantern = "lantern.cli:main"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src"]
